[gd_scene load_steps=105 format=2]

[ext_resource path="res://images/sam_run.png" type="Texture" id=1]
[ext_resource path="res://images/sam_idle_1.png" type="Texture" id=2]
[ext_resource path="res://images/sam_after_slash_1.png" type="Texture" id=3]
[ext_resource path="res://sounds/time_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Line2D.gd" type="Script" id=5]
[ext_resource path="res://player.gd" type="Script" id=6]
[ext_resource path="res://trail_to_mouse.gd" type="Script" id=7]
[ext_resource path="res://images/sam_after_slash_2.png" type="Texture" id=8]
[ext_resource path="res://images/sam_run_back.png" type="Texture" id=9]
[ext_resource path="res://images/sam_run_forward.png" type="Texture" id=10]
[ext_resource path="res://images/sam_run_left.png" type="Texture" id=11]
[ext_resource path="res://images/sam_idle_2.png" type="Texture" id=12]
[ext_resource path="res://images/sam_sheet.png" type="Texture" id=13]

[sub_resource type="Animation" id=25]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "hitted"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "invisibility"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=37]
resource_name = "normal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=26]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=95]
resource_name = "after_slice_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=94]
resource_name = "after_slice_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=96]
resource_name = "after_slice_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=88]
resource_name = "idle_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=87]
resource_name = "idle_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=89]
resource_name = "idle_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=92]
resource_name = "run_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=91]
resource_name = "run_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=90]
resource_name = "run_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=93]
resource_name = "run_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=100]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=101]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=102]
animation = "idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=97]
blend_point_0/node = SubResource( 100 )
blend_point_0/pos = Vector2( 0, -0.9 )
blend_point_1/node = SubResource( 101 )
blend_point_1/pos = Vector2( -0.9, 0 )
blend_point_2/node = SubResource( 102 )
blend_point_2/pos = Vector2( 0.9, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=110]
animation = "after_slice_up"

[sub_resource type="AnimationNodeAnimation" id=111]
animation = "after_slice_left"

[sub_resource type="AnimationNodeAnimation" id=112]
animation = "after_slice_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=109]
blend_point_0/node = SubResource( 110 )
blend_point_0/pos = Vector2( 0, -0.9 )
blend_point_1/node = SubResource( 111 )
blend_point_1/pos = Vector2( -0.9, 0 )
blend_point_2/node = SubResource( 112 )
blend_point_2/pos = Vector2( 0.9, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=118]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=119]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=120]
animation = "idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=121]
blend_point_0/node = SubResource( 118 )
blend_point_0/pos = Vector2( 0, -0.9 )
blend_point_1/node = SubResource( 119 )
blend_point_1/pos = Vector2( 0.9, 0 )
blend_point_2/node = SubResource( 120 )
blend_point_2/pos = Vector2( -0.9, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeTimeScale" id=116]

[sub_resource type="AnimationNodeBlendTree" id=117]
graph_offset = Vector2( -166.487, 65.8914 )
nodes/BlendSpace2D/node = SubResource( 121 )
nodes/BlendSpace2D/position = Vector2( 220, 100 )
nodes/TimeScale/node = SubResource( 116 )
nodes/TimeScale/position = Vector2( 520, 120 )
nodes/output/position = Vector2( 720, 120 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeAnimation" id=104]
animation = "run_down"

[sub_resource type="AnimationNodeAnimation" id=105]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=106]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=107]
animation = "run_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=103]
blend_point_0/node = SubResource( 104 )
blend_point_0/pos = Vector2( 0, 0.9 )
blend_point_1/node = SubResource( 105 )
blend_point_1/pos = Vector2( 0.9, 0 )
blend_point_2/node = SubResource( 106 )
blend_point_2/pos = Vector2( -0.9, 0 )
blend_point_3/node = SubResource( 107 )
blend_point_3/pos = Vector2( 0, -0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=122]

[sub_resource type="AnimationNodeStateMachineTransition" id=123]

[sub_resource type="AnimationNodeStateMachineTransition" id=124]

[sub_resource type="AnimationNodeStateMachineTransition" id=125]

[sub_resource type="AnimationNodeStateMachine" id=98]
states/_idle/node = SubResource( 97 )
states/_idle/position = Vector2( 258, -14 )
states/after_slice/node = SubResource( 109 )
states/after_slice/position = Vector2( 383, 134 )
states/idle/node = SubResource( 117 )
states/idle/position = Vector2( 582, 134 )
states/run/node = SubResource( 103 )
states/run/position = Vector2( 797, 134 )
transitions = [ "after_slice", "idle", SubResource( 122 ), "idle", "after_slice", SubResource( 123 ), "idle", "run", SubResource( 124 ), "run", "idle", SubResource( 125 ) ]
graph_offset = Vector2( -12, -84 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=99]

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": false,
"name": "left_to_right",
"speed": 10.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "after_slice_up",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "idle_up",
"speed": 3.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "run_up",
"speed": 10.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "run_right",
"speed": 10.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "run_left",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "after_slice_down",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "run_down",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "idle_down",
"speed": 3.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": false,
"name": "right_to_left",
"speed": 10.0
} ]

[sub_resource type="Animation" id=81]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=82]
resource_name = "hitted"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=83]
resource_name = "invisibility"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("..:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=84]
resource_name = "normal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=85]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4, 2.66667 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.523529, 1 ), 2.43837e-07, 2.43837e-07, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0, 0.125523, 0.502092, 0.861925, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=35]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.341176, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.741176, 0.490909 ), 0.039627, 0.039627, 0, 0, Vector2( 0.988235, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=34]
offsets = PoolRealArray( 0, 0.057554, 0.517986, 0.928058, 1 )
colors = PoolColorArray( 0.0196078, 0.109804, 0.0392157, 0, 0.180392, 0.937255, 0.333333, 1, 0.180392, 0.937255, 0.333333, 1, 0.180392, 0.937255, 0.333333, 1, 1, 1, 1, 0 )

[node name="player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 6 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 13 )
flip_h = true
hframes = 4
vframes = 8
frame = 3

[node name="anim" type="AnimationPlayer" parent="sprite"]
autoplay = "normal"
anims/hide = SubResource( 25 )
anims/hitted = SubResource( 36 )
anims/invisibility = SubResource( 38 )
anims/normal = SubResource( 37 )
anims/show = SubResource( 26 )

[node name="Tween" type="Tween" parent="sprite/anim"]

[node name="player_animation" type="AnimationPlayer" parent="sprite"]
playback_process_mode = 0
playback_speed = 0.5
anims/after_slice_left = SubResource( 95 )
anims/after_slice_right = SubResource( 94 )
anims/after_slice_up = SubResource( 96 )
anims/idle_left = SubResource( 88 )
anims/idle_right = SubResource( 87 )
anims/idle_up = SubResource( 89 )
anims/run_down = SubResource( 92 )
anims/run_left = SubResource( 91 )
anims/run_right = SubResource( 90 )
anims/run_up = SubResource( 93 )

[node name="anim_tree" type="AnimationTree" parent="sprite/player_animation"]
tree_root = SubResource( 98 )
anim_player = NodePath("..")
active = true
process_mode = 0
parameters/playback = SubResource( 99 )
parameters/_idle/blend_position = Vector2( 0, 0 )
parameters/after_slice/blend_position = Vector2( -0.150685, 0.801802 )
parameters/idle/BlendSpace2D/blend_position = Vector2( -0.904098, 0.027027 )
parameters/idle/TimeScale/scale = 0.5
parameters/run/blend_position = Vector2( -0.0104754, 0.018018 )

[node name="old_animations" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )
animation = "left_to_right"
frame = 3
playing = true

[node name="anim" type="AnimationPlayer" parent="old_animations"]
autoplay = "normal"
anims/hide = SubResource( 81 )
anims/hitted = SubResource( 82 )
anims/invisibility = SubResource( 83 )
anims/normal = SubResource( 84 )
anims/show = SubResource( 85 )

[node name="Tween" type="Tween" parent="old_animations/anim"]

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="collision2" type="CollisionShape2D" parent="."]
position = Vector2( -1.33333, 2.66667 )
shape = SubResource( 11 )

[node name="hitbox" type="Area2D" parent="." groups=["player"]]

[node name="collision2" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -1.33333, 2.66667 )
shape = SubResource( 11 )

[node name="trail" type="Line2D" parent="."]
points = PoolVector2Array( -2.66667, 2.66667 )
width_curve = SubResource( 24 )
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 23 )
script = ExtResource( 5 )
trailLength = 25

[node name="Timer" type="Timer" parent="trail"]
wait_time = 0.05
autostart = true

[node name="trail_to_mouse" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width_curve = SubResource( 24 )
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 23 )
joint_mode = 2
script = ExtResource( 7 )

[node name="recoil_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="slowmo_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="time_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="points_line" type="Line2D" parent="."]
width_curve = SubResource( 35 )
gradient = SubResource( 34 )
joint_mode = 2
sharp_limit = 0.0
round_precision = 20

[node name="invisibility_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="im_here" from="." to="." method="_on_player_im_here"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="trail/Timer" to="trail" method="_on_Timer_timeout"]
[connection signal="timeout" from="recoil_timer" to="." method="_on_recoil_timer_timeout"]
[connection signal="timeout" from="slowmo_timer" to="." method="_on_slowmo_timer_timeout"]
[connection signal="timeout" from="invisibility_timer" to="." method="_on_invisibility_timer_timeout"]
